[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ipeds-import"
version = "0.0.0"
dependencies = [
    "SQLAlchemy",
    "pyodbc",
    "pandas",
    "pywin32",
    "mysql-connector-python",
]
requires-python = "3.13"
authors = [
   {name = "Ryan Shiraki", email = "shirakrk@rose-hulman.edu"}
]
maintainers = [
  {name = "Ryan Shiraki", email = "shirakrk@rose-hulman.edu"}
]
description = "Imports IPEDS' Microsoft Access Database files into MySQL"
readme = "README.md"

[project.optional-dependencies]
test = []

[tool.pytest.ini_options]
pythonpath = "src"
